--- a/src/components/RenderSection/Experience/experience.module.scss
+++ b/src/components/RenderSection/Experience/experience.module.scss
@@ -7,8 +7,6 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    padding: 2rem;
-    margin: auto;
 
     &__header {
         display: flex;
